# TauriTavern

./: .gitignore  .taurignore  CONTRIBUTING.md  DEV.md  README.md  README_EN.md  build.js  copy-dist.js  package.json  playwright.config.mjs  pnpm-lock.yaml  rspack.config.js  webpack.config.js
fastools/: Cargo.toml
fastools/src/: artifacts.rs  main.rs  upsync.rs
src-tauri/: Cargo.toml  Info.ios.plist  build.rs  tauri.conf.json
src-tauri/bundle/linux/: com.tauritavern.client.metainfo.xml
src-tauri/capabilities/: default.json  desktop-dialog.json  mobile-barcode-scanner.json
src-tauri/crates/tt-adapter-archive/: Cargo.toml
src-tauri/crates/tt-adapter-archive/src/: archive_executor.rs  lib.rs  zipkit.rs
src-tauri/crates/tt-adapter-http/: Cargo.toml
src-tauri/crates/tt-adapter-http/src/: client.rs  lib.rs  pool.rs
src-tauri/crates/tt-adapter-media/: Cargo.toml
src-tauri/crates/tt-adapter-media/src/: host_resources.rs  lib.rs  thumbnails.rs  user_media_store.rs
src-tauri/crates/tt-adapter-provider-http/: Cargo.toml
src-tauri/crates/tt-adapter-provider-http/src/: file_replace.rs  http_error.rs  http_provider_metadata_repository.rs  http_stable_diffusion_repository.rs  lib.rs  workers_ai_endpoint.rs  workers_ai_models.rs
src-tauri/crates/tt-adapter-storage-core/: Cargo.toml
src-tauri/crates/tt-adapter-storage-core/src/: chat_directory_identity.rs  chat_format_importers.rs  jsonl_utils.rs  lib.rs  preset_file_naming.rs  sillytavern_sorting.rs
src-tauri/crates/tt-adapter-sync/: Cargo.toml
src-tauri/crates/tt-adapter-sync/src/: json_file.rs  lib.rs  sync_automation_store.rs  sync_fs.rs  sync_transfer.rs
src-tauri/crates/tt-adapter-tokenization/: Cargo.toml
src-tauri/crates/tt-adapter-tokenization/src/: lib.rs  miktik_tokenizer_repository.rs
src-tauri/crates/tt-application/: Cargo.toml
src-tauri/crates/tt-application/src/: client_asset_paths.rs  errors.rs  lib.rs
src-tauri/crates/tt-contracts/: Cargo.toml
src-tauri/crates/tt-contracts/src/: agent_profile_storage.rs  character.rs  chat.rs  client_asset_paths.rs  host_resource.rs  lib.rs  provider_metadata.rs  sync.rs  sync_automation.rs
src-tauri/crates/tt-domain/: Cargo.toml  build.rs
src-tauri/crates/tt-domain/src/: errors.rs  ios_policy.rs  json_merge.rs  lib.rs
src-tauri/crates/tt-ports/: Cargo.toml
src-tauri/crates/tt-ports/src/: bundled_template.rs  data_archive.rs  external_import.rs  host_resource.rs  lan_sync.rs  lib.rs  runtime_paths.rs  settings.rs  sync.rs  sync_automation.rs  user_media.rs
src-tauri/icons/: icon.icns
src-tauri/src/: android.rs  app.rs  lib.rs  main.rs  observability_targets.rs  product.rs
src-tauri/src/app/: backend_errors.rs  backend_readiness.rs  bootstrap.rs  composition.rs  dev_observability.rs  migrations.rs  startup_profile.rs  state.rs
src-tauri/src/app/composition/: adapters.rs  repositories.rs
src-tauri/src/app/contract_tests/: agent_runtime.rs  architecture.rs  character.rs  host_resources.rs  mod.rs
src-tauri/src/app/host/: mod.rs  observability.rs  plugins.rs  resources.rs  runtime_paths.rs  setup.rs  shutdown.rs  window.rs
src-tauri/src/application/: client_asset_paths.rs  errors.rs  host_contract.rs  json_merge.rs  mod.rs
src-tauri/src/application/dto/: agent_dto.rs  background_dto.rs  bootstrap_dto.rs  character_dto.rs  chat_completion_dto.rs  chat_dto.rs  data_archive_dto.rs  group_dto.rs  mod.rs  preset_dto.rs  secret_dto.rs  settings_dto.rs  theme_dto.rs  tokenization_dto.rs  user_directory_dto.rs  user_dto.rs  world_info_dto.rs
src-tauri/src/application/services/: agent_model_gateway.rs  agent_profile_diagnostic_service.rs  agent_profile_service.rs  agent_run_history_service.rs  agent_run_retention_automation_service.rs  agent_run_retention_planner.rs  agent_run_retention_test_support.rs  agent_runtime_service.rs  agent_tools.rs  agent_workspace_lifecycle_service.rs  agent_workspace_scope.rs  asset_service.rs  avatar_service.rs  background_service.rs  bundled_template_service.rs  character_service.rs  chat_file_validation.rs  chat_service.rs  content_service.rs  data_archive_service.rs  data_change_reconciler.rs  extension_service.rs  extension_store_service.rs  external_import_service.rs  group_chat_service.rs  group_service.rs  lan_sync_service.rs  llm_connection_service.rs  mod.rs  native_regex_service.rs  preset_service.rs  prompt_assembly_service.rs  quick_reply_service.rs  runtime_paths_service.rs  secret_service.rs  settings_service.rs  skill_service.rs  stable_diffusion_service.rs  sync_automation_service.rs  sync_job_coordinator.rs  (+11 more)
src-tauri/src/domain/: errors.rs  ios_policy.rs  json_merge.rs  mod.rs
src-tauri/src/domain/models/: background.rs  character.rs  chat.rs  data_archive.rs  extension.rs  group.rs  lan_sync.rs  mod.rs  preset.rs  quick_reply.rs  secret.rs  settings.rs  skill.rs  sync.rs  sync_automation.rs  theme.rs  tt_sync.rs  update.rs  user.rs  user_directory.rs  world_info.rs
src-tauri/src/domain/repositories/: agent_invocation_repository.rs  agent_profile_repository.rs  agent_profile_storage_health_repository.rs  agent_run_repository.rs  agent_workspace_lifecycle_repository.rs  asset_repository.rs  avatar_repository.rs  background_repository.rs  character_repository.rs  chat_completion_repository.rs  chat_repository.rs  chat_types.rs  (+26 more)
src-tauri/src/infrastructure/: apple_webview_js_dialogs.rs  assets.rs  bundled_resources.rs  github.rs  host_resources.rs  http_client.rs  http_client_pool.rs  http_error.rs  ios_document_picker.rs  ios_policy_cache.rs  ios_share_sheet.rs  ios_webview.rs  mod.rs  paths.rs  platform_boundary_contract_tests.rs  preset_file_naming.rs  request_path.rs  runtime_paths_config_store.rs  sync_automation_store.rs  sync_bundle.rs  sync_fs.rs  sync_transfer.rs  sync_v2.rs  third_party_assets.rs  third_party_paths.rs  trivium_store.rs  user_data_paths.rs  user_media_store.rs  zipkit.rs
src-tauri/src/platform/: ios_document_picker.rs  ios_share_sheet.rs  mod.rs
src-tauri/src/presentation/: errors.rs  main_window_presenter.rs  mod.rs  windows_notifications.rs  windows_tray.rs
(+1172 files in other folders)
