[package]
name = "tauritavern"
version = "1.2.0"
description = "SillyTavern backend rebuilt with Tauri and Rust"
authors = ["TauriTavern Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauritavern_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2.10.2", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-fs = "2.4.5"
tauri-plugin-notification = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "std"] }
tracing-appender = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
tokio = { version = "1", default-features = false, features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
uuid = { version = "1.4", default-features = false, features = ["serde", "std", "v4"] }
async-trait = "0.1"
url = "2.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
image = { version = "0.24", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "webp"] }
png = "0.17"
mime_guess = "2.0.5"
flate2 = "1.1.9"
miktik = { version = "0.1.2", default_features = false, features = ["openai", "huggingface", "sentencepiece"] }
ureq = { version = "3.2.0", default_features = false, features = ["rustls"] }
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
local-ip-address = "0.6"
tower = "0.4"
qrcode = "0.14"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
portable = []

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = "symbols"
