[package]
name = "tt-adapter-media"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1"
chrono = { workspace = true }
image = { version = "0.24", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "webp"] }
mime_guess = "2.0.5"
serde_json = { workspace = true }
tokio = { version = "1", default-features = false, features = ["fs", "io-util", "rt", "sync"] }
tracing = "0.1"
tt-adapter-storage-core = { path = "../tt-adapter-storage-core" }
tt-contracts = { path = "../tt-contracts" }
tt-domain = { path = "../tt-domain" }
tt-ports = { path = "../tt-ports" }
uuid = { workspace = true }

[dev-dependencies]
base64 = "0.22"
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
