[package]
name = "tt-adapter-provider-http"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1"
base64 = "0.22"
futures-util = "0.3"
percent-encoding = "2"
reqwest = { workspace = true, features = ["http2", "json", "multipart", "query", "rustls", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
tokio = { version = "1", default-features = false, features = ["fs", "io-util", "macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["handshake"] }
tracing = "0.1"
tt-adapter-http = { path = "../tt-adapter-http" }
tt-domain = { path = "../tt-domain" }
tt-ports = { path = "../tt-ports" }
url = "2.4"
uuid = { workspace = true }
yup-oauth2 = { version = "12.1.2", default-features = false, features = ["hyper-rustls", "aws-lc-rs", "service-account"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
hyper-util = { version = "0.1", default-features = false, features = ["client-legacy", "http1", "http2", "tokio"] }
rustls = "0.23"
webpki-roots = "1"
