[package]
name = "tt-adapter-tokenization"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1"
flate2 = "1.1.9"
miktik = { version = "0.2.0", default-features = false, features = ["openai", "huggingface", "sentencepiece"] }
serde_json = { workspace = true }
tokio = { version = "1", default-features = false, features = ["fs", "rt", "sync"] }
tt-adapter-http = { path = "../tt-adapter-http" }
tt-domain = { path = "../tt-domain" }
tt-ports = { path = "../tt-ports" }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
