[package]
name = "tt-ports"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", default-features = false, features = ["sync"] }
tt-contracts = { path = "../tt-contracts" }
tt-domain = { path = "../tt-domain" }
ttsync-contract = { workspace = true }
url = "2.4"
